Data is truncated everywhere when long text is entered fixed

--- a/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/investigation-before-admission/investigation-before-admission.component.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/investigation-before-admission/investigation-before-admission.component.css
@@ -1,3 +1,5 @@
-.investigation-before-admission {
-
+.labelleft{
+    margin-left: 8px;
+    margin-bottom:5px !important;
+    overflow-wrap: break-word !important;   
 }
