--- a/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/person-accompanying-details/person-accompanying-details.component.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/person-accompanying-details/person-accompanying-details.component.css
@@ -1,10 +1,12 @@
-.cardeffect{
+.cardeffect {
     width: 95%;
     padding: 5 8;
-    background-color: #f0f0f0;  
+    background-color: #f0f0f0;
     border-radius: 8px;
-  }
-  .labelleft{
-      margin-left: 8px;
-      /* color: #396766; */
-  }
+}
+
+.labelleft {
+    margin-left: 8px;
+    overflow-wrap: break-word !important;
+    /* color: #396766; */
+}
