--- a/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/reason-for-admission-details/reason-for-admission-details.component.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/reason-for-admission-details/reason-for-admission-details.component.css
@@ -1,3 +1,6 @@
-.reason-for-admission-details {
-
+.labelleft{
+    margin-left: 8px;
+    margin-bottom:5px !important;
+    overflow-wrap: break-word !important;
+    /* color: #396766; */
 }
